--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 
+
+#数据库连接地址
+spring.datasource.url=jdbc:mysql://localhost:3306/testone?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+#数据库账号
+spring.datasource.username=root
+#数据库密码
+spring.datasource.password=root
+#数据库驱动
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis-plus.configuration.cache-enabled=false
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.global-config.db-config.table-underline=true
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+#端口号
+server.port=8080
+server.servlet.session.timeout=30m
+
+
+#文件上传   默认支持上传  默认支持磁盘io  默认单个文件1MB   一次请求最大10MB  可设置文件缓存位置
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+
+
+
